changes on fixe mac

--- a/Application p5/Blob detection phase 2/vida/examples/active_zones_demystified_progressive_background_camera_example.html
+++ b/Application p5/Blob detection phase 2/vida/examples/active_zones_demystified_progressive_background_camera_example.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <title>Fragment sonore</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vida example</title>
-    <style> body {padding: 0; margin: 0} </style>
-    <script src="../p5/p5.min.js"></script>
-    <script src="../p5/p5.sound.min.js"></script>
-    <script src="../p5/p5.dom.min.js"></script>
-    <script src="../vida/p5.vida.min.js"></script>
+    <script src="lib/p5.min.js"></script>
+    <script src="lib/p5.sound.min.js"></script>
+    <script src="lib/p5.dom.min.js"></script>
+    <script src="lib/p5.vida.min.js"></script>
     <script src="active_zones_demystified_progressive_background_camera_example.js"></script>
-  </head>
-  <body>
-  </body>
+    <style> @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');</style>
+</head>
+
+<!-- The Body of the webpage -->
+<body>
+
+	<!-- The Content that will be printed out -->
+<section class="content">
+<!-- The text will be inserted here -->
+<h1 class="head"> FRAGMENT SONORE<h1>
+<div id="sketch-holder"></div>
+<h3 class="ecole">SÉISMES</h3>
+<h3 class="head"> Service Sismologique Suisse</h3>
+</section>
+
+</body>
 </html>
