--- a/Application p5/Blob detection phase 2/vida/examples/active_zones_demystified_progressive_background_camera_example.html
+++ b/Application p5/Blob detection phase 2/vida/examples/active_zones_demystified_progressive_background_camera_example.html
@@ -19,10 +19,21 @@
 	<!-- The Content that will be printed out -->
 <section class="content">
 <!-- The text will be inserted here -->
-<h1 class="head"> FRAGMENT SONORE<h1>
-<div id="sketch-holder"></div>
-<h3 class="ecole">SÉISMES</h3>
-<h3 class="head"> Service Sismologique Suisse</h3>
+
+<div class="text-container">
+  <h1 class="head"> FRAGMENT SONORE</h1>
+
+  <h3 class="ecole">SÉISMES</h3>
+  <h3 class="head"> Service Sismologique Suisse</h3>
+</div>
+
+
+<div class="background">
+  <div id="sketch-container">
+    <div id="sketch-holder"></div>
+  </div>
+</div>
+
 </section>
 
 </body>
